python module fibo added.

--- a/Python/AIP_Day_00_python_Tutorials.ipynb
+++ b/Python/AIP_Day_00_python_Tutorials.ipynb
@@ -1447,7 +1447,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fib = fibo.fib\n",
+    "fib = fibo.fib2\n",
     "fib2(500)"
    ]
   },
