Slight update to Day 03 notes, and addition of Day 04 jupyter notebook document.

--- a/Python/AIP_Day_03_SITK_ImageClass.ipynb
+++ b/Python/AIP_Day_03_SITK_ImageClass.ipynb
@@ -7,6 +7,10 @@
     "<h1 align=\"center\">Advanced Image Processing and Analysis</h1>\n",
     "<h3 align=\"center\">ECE 4438B/ECE 9022/ECE 9202B/BIOMED 9519B/BIOPHYS 9519B/CAMI 9519B</h3>\n",
     "<h4 align=\"center\"><a href=\"mailto:echen29@uwo.ca\"> Elvis Chen, PhD, LL</a></h4>\n",
+    "<h4 align=\"center\">Robarts Research Institute, London</h4>\n",
+    "<h4 align=\"center\">Department of Electrical and Computer Engineering, Western University</h4>\n",
+    "<h4 align=\"center\">School of Biomedical Engineering, Western University</h4>\n",
+    "<h4 align=\"center\">Department of Medical Biophysics, Western University</h4>\n",
     "<h4 align=\"center\">Day 03, January 14, 2019</h4>"
    ]
   },
@@ -40,19 +44,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SimpleITK Version: 1.1.0 (ITK 4.13)\n",
-      "Compiled: Mar 22 2018 11:13:53\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# let's load a \"volume\" and display a slice (image) of a brain\n",
     "\n",
@@ -67,17 +61,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fetching cthead1.png\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# In this command, we are executing 3 different commands in a single line of pythong code\n",
     "#\n",
@@ -92,17 +78,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fetching B2.tiff\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# let's load another image: head in MRI\n",
     "sitk.Show(sitk.ReadImage(fetch_data(\"B2.tiff\"))) "
@@ -147,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,82 +198,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Image (000001D79EA65E50)\n",
-      "  RTTI typeinfo:   class itk::Image<short,3>\n",
-      "  Reference Count: 1\n",
-      "  Modified Time: 2432\n",
-      "  Debug: Off\n",
-      "  Object Name: \n",
-      "  Observers: \n",
-      "    none\n",
-      "  Source: (none)\n",
-      "  Source output name: (none)\n",
-      "  Release Data: Off\n",
-      "  Data Released: False\n",
-      "  Global Release Data: Off\n",
-      "  PipelineMTime: 2406\n",
-      "  UpdateMTime: 2431\n",
-      "  RealTimeStamp: 0 seconds \n",
-      "  LargestPossibleRegion: \n",
-      "    Dimension: 3\n",
-      "    Index: [0, 0, 0]\n",
-      "    Size: [512, 512, 29]\n",
-      "  BufferedRegion: \n",
-      "    Dimension: 3\n",
-      "    Index: [0, 0, 0]\n",
-      "    Size: [512, 512, 29]\n",
-      "  RequestedRegion: \n",
-      "    Dimension: 3\n",
-      "    Index: [0, 0, 0]\n",
-      "    Size: [512, 512, 29]\n",
-      "  Spacing: [0.653595, 0.653595, 4]\n",
-      "  Origin: [0, 0, 0]\n",
-      "  Direction: \n",
-      "1 0 0\n",
-      "0 1 0\n",
-      "0 0 1\n",
-      "\n",
-      "  IndexToPointMatrix: \n",
-      "0.653595 0 0\n",
-      "0 0.653595 0\n",
-      "0 0 4\n",
-      "\n",
-      "  PointToIndexMatrix: \n",
-      "1.53 0 0\n",
-      "0 1.53 0\n",
-      "0 0 0.25\n",
-      "\n",
-      "  Inverse Direction: \n",
-      "1 0 0\n",
-      "0 1 0\n",
-      "0 0 1\n",
-      "\n",
-      "  PixelContainer: \n",
-      "    ImportImageContainer (000001D79EA3F0D0)\n",
-      "      RTTI typeinfo:   class itk::ImportImageContainer<unsigned __int64,short>\n",
-      "      Reference Count: 1\n",
-      "      Modified Time: 2428\n",
-      "      Debug: Off\n",
-      "      Object Name: \n",
-      "      Observers: \n",
-      "        none\n",
-      "      Pointer: 000001D79F7B4040\n",
-      "      Container manages memory: true\n",
-      "      Size: 7602176\n",
-      "      Capacity: 7602176\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(vol)"
    ]
@@ -316,21 +223,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(512, 512, 29)\n",
-      "(0.0, 0.0, 0.0)\n",
-      "(0.653595, 0.653595, 4.0)\n",
-      "(1.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 1.0)\n",
-      "1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# some of the class accessors\n",
     "\n",
@@ -448,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,20 +362,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "256\n",
-      "128\n",
-      "64\n",
-      "(1.0, 1.0, 1.0)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(image.GetWidth())\n",
     "print(image.GetHeight())\n",
@@ -497,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,17 +400,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(image_2D.GetNumberOfComponentsPerPixel())"
    ]
@@ -540,18 +416,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(32, 32)\n",
-      "0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(image_2D.GetSize())\n",
     "print(image_2D.GetDepth())"
@@ -566,24 +433,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "32-bit unsigned integer\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(image_2D.GetPixelIDTypeAsString())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,17 +458,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(image_RGB.GetNumberOfComponentsPerPixel())"
    ]
@@ -623,18 +474,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n",
-      "(128, 128)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(image_RGB.GetDimension())\n",
     "print(image_RGB.GetSize())"
@@ -692,9 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "zSliceID = 50 # the 51th sliced in the z-direction\n",
@@ -751,9 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Get a view of the image data as a numpy array, useful for display\n",
@@ -876,9 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "sitk.Show(image)"
@@ -887,9 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "sitk.Show?"
@@ -905,9 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -935,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -947,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -959,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -977,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -991,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1009,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1020,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1032,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1044,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1054,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
