update to STAPLE algorithm

--- a/Python/AIP_Day_15_Segmentation_Evaluation.ipynb
+++ b/Python/AIP_Day_15_Segmentation_Evaluation.ipynb
@@ -89,8 +89,7 @@
     "\n",
     "<img src=\"OverUnder.PNG\" width=\"550\"/>\n",
     "\n",
-    "\n",
-    "On the left, we have a case of *Under-Segmentation* and, on the right, a case of *Over-Segmentation*. The dice Coefficients for both cases are the same. Thus we need other metrics to tell these two cases apart.\n",
+    "The image pair shown below is a case of *over-segmentation* (left) versus a different algorithm that did not suffer from the over-segmentation problem.\n",
     "\n",
     "![An example of over segmentation](https://www.researchgate.net/profile/Ashraf_Aly_H/publication/267753061/figure/fig4/AS:295575825207311@1447482176812/Example-image-from-grayscale-images-a-Over-segmentation-problem-by-using-Active-Contour.png)\n",
     "\n",
@@ -500,9 +499,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the absence of the ground truth, the STAPLE algorithm estimates what the ground truth is based on multiple segmentations. The mathematical foundation is based on the [Expectation-Maximization](https://en.wikipedia.org/wiki/Expectation%E2%80%93maximization_algorithm) (EM) algorithm, which is quite involved and thus not covered in this class. \n",
+    "In the absence of the ground truth, the [STAPLE algorithm](https://ieeexplore.ieee.org/document/1309714) estimates what the ground truth is based on multiple segmentations. The mathematical foundation is based on the [Expectation-Maximization](https://en.wikipedia.org/wiki/Expectation%E2%80%93maximization_algorithm) (EM) algorithm, which is quite involved and thus not covered in this class. \n",
     "\n",
     "The STAPLE algorithm is an iterative. At each iteration, the ground truth is estimated based on the input. The performance of each input is evaluated against the estimated ground truth in terms of sensitivity and specificity. If a particular input segmentation is evaluated as *good*, i.e. having high sensitivity and specificity, it is weighted more to generate the next estimate of the ground truth.\n",
+    "\n",
+    "<img src=\"STAPLE.gif\" width=\"650\"/>\n",
+    "\n",
+    "(image courtesy of the [STAPLE paper by Warfield et al.](https://ieeexplore.ieee.org/document/1309714))\n",
     "\n",
     "The intermediate results are an image of probability, with value of each pixel/voxel representing the probability for that pixel/voxel to be part of the ground truth, and the estimated sensitivity and specificity for each input segmentation.\n",
     "\n",
