alternative for the registration_gui

--- a/Python/AIP_Day_19_Transformation.ipynb
+++ b/Python/AIP_Day_19_Transformation.ipynb
@@ -41,7 +41,7 @@
     "%run update_path_to_download_script\n",
     "from downloaddata import fetch_data as fdata\n",
     "import gui\n",
-    "import registration_gui as rgui\n",
+    "##import registration_gui as rgui\n",
     "%matplotlib notebook\n",
     "\n",
     "import numpy as np\n",
@@ -299,6 +299,83 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "\n",
+    "from ipywidgets import interact, fixed\n",
+    "from IPython.display import clear_output\n",
+    "\n",
+    "# Callback invoked by the interact IPython method for scrolling through the image stacks of\n",
+    "# the two images (moving and fixed).\n",
+    "def display_images(fixed_image_z, moving_image_z, fixed_npa, moving_npa):\n",
+    "    # Create a figure with two subplots and the specified size.\n",
+    "    plt.subplots(1,2,figsize=(10,8))\n",
+    "    \n",
+    "    # Draw the fixed image in the first subplot.\n",
+    "    plt.subplot(1,2,1)\n",
+    "    plt.imshow(fixed_npa[fixed_image_z,:,:],cmap=plt.cm.Greys_r);\n",
+    "    plt.title('fixed image')\n",
+    "    plt.axis('off')\n",
+    "    \n",
+    "    # Draw the moving image in the second subplot.\n",
+    "    plt.subplot(1,2,2)\n",
+    "    plt.imshow(moving_npa[moving_image_z,:,:],cmap=plt.cm.Greys_r);\n",
+    "    plt.title('moving image')\n",
+    "    plt.axis('off')\n",
+    "    \n",
+    "    plt.show()\n",
+    "\n",
+    "# Callback invoked by the IPython interact method for scrolling and modifying the alpha blending\n",
+    "# of an image stack of two images that occupy the same physical space. \n",
+    "def display_images_with_alpha(image_z, alpha, fixed, moving):\n",
+    "    img = (1.0 - alpha)*fixed[:,:,image_z] + alpha*moving[:,:,image_z] \n",
+    "    plt.imshow(sitk.GetArrayViewFromImage(img),cmap=plt.cm.Greys_r);\n",
+    "    plt.axis('off')\n",
+    "    plt.show()\n",
+    "    \n",
+    "# Callback invoked when the StartEvent happens, sets up our new data.\n",
+    "def start_plot():\n",
+    "    global metric_values, multires_iterations\n",
+    "    \n",
+    "    metric_values = []\n",
+    "    multires_iterations = []\n",
+    "\n",
+    "# Callback invoked when the EndEvent happens, do cleanup of data and figure.\n",
+    "def end_plot():\n",
+    "    global metric_values, multires_iterations\n",
+    "    \n",
+    "    del metric_values\n",
+    "    del multires_iterations\n",
+    "    # Close figure, we don't want to get a duplicate of the plot latter on.\n",
+    "    plt.close()\n",
+    "\n",
+    "# Callback invoked when the IterationEvent happens, update our data and display new figure.    \n",
+    "def plot_values(registration_method):\n",
+    "    global metric_values, multires_iterations\n",
+    "    \n",
+    "    metric_values.append(registration_method.GetMetricValue())                                       \n",
+    "    # Clear the output area (wait=True, to reduce flickering), and plot current data\n",
+    "    clear_output(wait=True)\n",
+    "    # Plot the similarity metric values\n",
+    "    plt.plot(metric_values, 'r')\n",
+    "    plt.plot(multires_iterations, [metric_values[index] for index in multires_iterations], 'b*')\n",
+    "    plt.xlabel('Iteration Number',fontsize=12)\n",
+    "    plt.ylabel('Metric Value',fontsize=12)\n",
+    "    plt.show()\n",
+    "    \n",
+    "# Callback invoked when the sitkMultiResolutionIterationEvent happens, update the index into the \n",
+    "# metric_values list. \n",
+    "def update_multires_iterations():\n",
+    "    global metric_values, multires_iterations\n",
+    "    multires_iterations.append(len(metric_values)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "registration_method = sitk.ImageRegistrationMethod()\n",
     "\n",
     "# Similarity metric settings,\n",
@@ -317,18 +394,27 @@
     "# transform\n",
     "#initial_transform = sitk.TranslationTransform( fixedImage.GetDimension() )\n",
     "initial_transform = sitk.Euler2DTransform()\n",
-    "# initial_transform.SetCenter( [110.5, 128.5] )\n",
+    "#initial_transform.SetCenter( [110.5, 128.5] )\n",
     "\n",
     "# 1st option relates to rotation\n",
-    "# registration_method.SetOptimizerScales( [1.0/0.35, 1.0/100.0, 1.0/100.0] )\n",
+    "#registration_method.SetOptimizerScales( [1.0/0.35, 1.0/100.0, 1.0/100.0] )\n",
     "\n",
     "registration_method.SetInitialTransform( initial_transform )\n",
     "\n",
     "# Connect all of the observers so that we can perform plotting during registration.\n",
-    "registration_method.AddCommand(sitk.sitkStartEvent, rgui.start_plot)\n",
-    "registration_method.AddCommand(sitk.sitkEndEvent, rgui.end_plot)\n",
-    "registration_method.AddCommand(sitk.sitkMultiResolutionIterationEvent, rgui.update_multires_iterations) \n",
-    "registration_method.AddCommand(sitk.sitkIterationEvent, lambda: rgui.plot_values(registration_method))\n",
+    "\n",
+    "#\n",
+    "# the registration_gui does not work for some reasons, so we use an alternative\n",
+    "#registration_method.AddCommand(sitk.sitkStartEvent, rgui.start_plot)\n",
+    "#registration_method.AddCommand(sitk.sitkEndEvent, rgui.end_plot)\n",
+    "#registration_method.AddCommand(sitk.sitkMultiResolutionIterationEvent, rgui.update_multires_iterations) \n",
+    "#registration_method.AddCommand(sitk.sitkIterationEvent, lambda: rgui.plot_values(registration_method))\n",
+    "\n",
+    "# Connect all of the observers so that we can perform plotting during registration.\n",
+    "registration_method.AddCommand(sitk.sitkStartEvent, start_plot)\n",
+    "registration_method.AddCommand(sitk.sitkEndEvent, end_plot)\n",
+    "registration_method.AddCommand(sitk.sitkMultiResolutionIterationEvent, update_multires_iterations) \n",
+    "registration_method.AddCommand(sitk.sitkIterationEvent, lambda: plot_values(registration_method))\n",
     "\n",
     "\n",
     "final_transform = registration_method.Execute( fixedImage, movingImage )\n",
