--- a/Python/AIP_Day_20_Manual_Initialization.ipynb
+++ b/Python/AIP_Day_20_Manual_Initialization.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "<h1 align=\"center\">Advanced Image Processing and Analysis</h1>\n",
     "<h3 align=\"center\">ECE 4438B/ECE 9022/ECE 9202B/BIOMED 9519B/BIOPHYS 9519B/CAMI 9519B</h3>\n",
-    "<h4 align=\"center\">Elvis Chen, PhD, LEL, [chene@robarts.ca](mailto:chene@robarts.ca?subject=Day 20: Manual Initialization)</h4>\n",
+    "<h4 align=\"center\"><a href=\"mailto:echen29@uwo.ca?subject=Day 20: Manual Initialization\"> Elvis Chen, PhD, LL</a></h4>\n",
     "<h4 align=\"center\">Day 20, March 19, 2019</h4>"
    ]
   },
@@ -26,9 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import SimpleITK as sitk\n",
@@ -83,9 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "ct_window_level = [1727,-320]\n",
@@ -104,9 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Get the manually specified points and compute the transformation.\n",
@@ -157,9 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "moving_resampled = sitk.Resample(moving_image, fixed_image, final_transform, sitk.sitkLinear, 0.0, moving_image.GetPixelID())\n",
