--- a/Python/AIP_Day_22_Deformable_Registration_Intro.ipynb
+++ b/Python/AIP_Day_22_Deformable_Registration_Intro.ipynb
@@ -284,7 +284,7 @@
     "    \n",
     "$\n",
     "T_{shear} = \\begin{pmatrix} 1 & sh_x^y & sh_x^z & 0 \\\\\n",
-    "sh_y^x & 1 & sh_z^z & 0 \\\\\n",
+    "sh_y^x & 1 & sh_y^z & 0 \\\\\n",
     "sh_z^x & sh_z^y & 1 & 0 \\\\\n",
     "0 & 0 & 0 & 1\n",
     "\\end{pmatrix}\n",
@@ -407,7 +407,7 @@
    "source": [
     "### Splines Transformation -- Overview\n",
     "\n",
-    "Spline transformation is popular for deformable image registration, often used in entertainment industry\n",
+    "Spline transformation is popular for deformable image registration, often used in the entertainment industry\n",
     "\n",
     "[![test](man2ape.PNG)](https://www.youtube.com/watch?v=4NU9ikjqjC0&t=3s)"
    ]
@@ -416,7 +416,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In medical imaging, it is also used to registration time-series of deformable organs, such as beating heart in MRI, or prostate under different pressure (TRUS or MRI):\n",
+    "In medical imaging, it is also used to register time-series of deformable organs, such as beating heart in MRI, or prostate under different pressure (TRUS or MRI):\n",
     "\n",
     "<img src=\"prostate_deformed_grid.PNG\" style=\"width:800px\"/>\n",
     "[Interactive Deformation Registration of Endorectal Prostate MRI Using ITK Thin Plate Splines](http://www.academicradiology.org/article/S1076-6332%2808%2900569-2/pdf)"
@@ -504,7 +504,7 @@
    "source": [
     "That is, in the physical setting, the deflection is in the $z$ direction, orthogonal to the plane. In order to apply this idea to the problem of image transformation, one interprets the lifting of the plate as a displacement of the $x$ or $y$ coordinates within the plane. \n",
     "\n",
-    "Minimizing this energy leads to the know biharmonic equation (where $w$ is the deflection):\n",
+    "Minimizing this energy leads to the known biharmonic equation (where $w$ is the deflection):\n",
     "\n",
     "$\n",
     "\\Delta^2 w = (\\frac{\\partial^2}{\\partial x^2} + \\frac{\\partial^2}{\\partial y^2})^2 w = f(x,y)\n",
@@ -584,7 +584,7 @@
     "T(x,y) = a_1 + a_2 x + a_3 y + \\sum_{j=1}^n w_{j} U(| P_j - (x,y) |)\n",
     "$\n",
     "\n",
-    "where $P_j$ denotes the $j^{th}$ landmark, $w_i$ is the weight of the basis function $U$ for $j^{th}$ landmark, and $\\ P_j-(x,y) |$ is the distance between the $j^{th}$ landmark (control point) and a position $(x,y)$.\n",
+    "where $P_j$ denotes the $j^{th}$ landmark, $w_i$ is the weight of the basis function $U$ for $j^{th}$ landmark, and $| P_j-(x,y) |$ is the distance between the $j^{th}$ landmark (control point) and a position $(x,y)$.\n",
     "\n",
     "$U$ is the a function based on the distance. In the $2$D case, \n",
     "\n",
@@ -658,8 +658,8 @@
     "$\n",
     "\\begin{eqnarray}\n",
     "T(x,y) & = & \\begin{pmatrix}t_1(x,y)\\\\t_2(x,y)\\end{pmatrix}\\\\\n",
-    "t_1 & = & x' = a_{1,1} + a_{2,1} x + a_{3,1} y + \\sum_{j=1}^n w_{j,1} U(|(x_j,y_j,z_j)-(x,y,z)|)\\\\\n",
-    "t_2 & = & y' = a_{1,2} + a_{2,2} x + a_{3,2} y + \\sum_{j=1}^n w_{j,2} U(|(x_j,y_j,z_j)-(x,y,z)|)\\\\\n",
+    "t_1 & = & x' = a_{1,1} + a_{2,1} x + a_{3,1} y + \\sum_{j=1}^n w_{j,1} U(|(x_j,y_j)-(x,y)|)\\\\\n",
+    "t_2 & = & y' = a_{1,2} + a_{2,2} x + a_{3,2} y + \\sum_{j=1}^n w_{j,2} U(|(x_j,y_j)-(x,y)|)\\\\\n",
     "\\end{eqnarray}\n",
     "$\n",
     "\n",
@@ -1064,7 +1064,7 @@
     "```python\n",
     "renderer = slicer.app.layoutManager().threeDWidget(0).threeDView().renderWindow().GetRenderers().GetFirstRenderer()\n",
     "reader = vtk.vtkJPEGReader()\n",
-    "reader.SetFileName('C:\\\\Users\\\\chene\\\\Downloads\\\\temp\\\\AIP_W18_Notebooks\\\\data\\\\images\\\\monkey.jpg')\n",
+    "reader.SetFileName('C:\\\\Users\\\\chene\\\\Documents\\\\UWO_AIP_FW18.git\\\\Data\\\\images\\\\orangutan.jpg')\n",
     "reader.Update()\n",
     "```"
    ]
