--- a/Python/AIP_Day_25_FFD.ipynb
+++ b/Python/AIP_Day_25_FFD.ipynb
@@ -7,15 +7,16 @@
     "<h1 align=\"center\">Advanced Image Processing and Analysis</h1>\n",
     "<h3 align=\"center\">ECE 4438B/ECE 9022/ECE 9202B/BIOMED 9519B/BIOPHYS 9519B/CAMI 9519B</h3>\n",
     "<h4 align=\"center\"><a href=\"mailto:echen29@uwo.ca?subject=Day Day 23: Free Form Deformation\"> Elvis Chen, PhD, LL</a></h4>\n",
-    "<h4 align=\"center\">Day 23, April 01, 2019</h4>"
+    "<h4 align=\"center\">Day 25, April 01, 2019</h4>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from __future__ import print_function\n",
     "import numpy as np\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
@@ -28,7 +29,6 @@
     "import SimpleITK as sitk\n",
     "import registration_utilities as ru\n",
     "import registration_callbacks as rc\n",
-    "from __future__ import print_function\n",
     "import utilities as util\n",
     "\n",
     "from ipywidgets import interact, fixed\n",
@@ -102,7 +102,7 @@
    "source": [
     "#### Point Registration with TPS\n",
     "\n",
-    "(In $2D$, generalize it to $3$D youself accordingly. Think about how many parameters are needed in both cases.)\n",
+    "(In $2D$, generalize it to $3D$ youself accordingly. Think about how many parameters are needed in both cases.)\n",
     "* For $N$ pairs of points $(x,y) \\rightarrow (x',y')$,\n",
     "* Find the $6+2N$ coefficients\n",
     "\n",
@@ -111,8 +111,8 @@
     "\n",
     "$\n",
     "\\begin{eqnarray}\n",
-    "x' & = & a_{1,1} + a_{2,1} x + a_{3,1} y + \\sum_{j=1}^n w_{j,1} U(|(x_j,y_j,z_j)-(x,y,z)|)\\\\\n",
-    "y' & = & a_{1,2} + a_{2,2} x + a_{3,2} y + \\sum_{j=1}^n w_{j,2} U(|(x_j,y_j,z_j)-(x,y,z)|)\\\\\n",
+    "x' & = & a_{1,1} + a_{2,1} x + a_{3,1} y + \\sum_{j=1}^n w_{j,1} U(|(x_j,y_j)-(x,y)|)\\\\\n",
+    "y' & = & a_{1,2} + a_{2,2} x + a_{3,2} y + \\sum_{j=1}^n w_{j,2} U(|(x_j,y_j)-(x,y)|)\\\\\n",
     "\\end{eqnarray}\n",
     "$\n",
     "\n",
@@ -150,7 +150,7 @@
     "\\sum_j^N w_{j,1} r^2 \\log( r^2)\n",
     "$\n",
     "\n",
-    "begin to cancel out. The sum $\\to 0$. The same thing happens to $y$, so\n",
+    "begin to cancel out. The sum $\\to 0$. The same thing happens to $y$-axis, so\n",
     "\n",
     "$\n",
     "\\begin{eqnarray}\n",
@@ -159,7 +159,89 @@
     "\\end{eqnarray}\n",
     "$\n",
     "\n",
-    "which is a *affine* registration."
+    "which is an *affine* registration."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Example\n",
+    "\n",
+    "Since we will be implementing TPS in Assignment 4, we will use VTK's implementation for this numerical example. If you have downloaded 3D Slicer previously (instruction in Day 22's notes), enter the following python codes in Slicer's Python intepreter.\n",
+    "\n",
+    "(for now, we are using the simple examples of TPS as outlined in Day 22's notes, i.e. making a sad orangutan)\n",
+    "\n",
+    "```python\n",
+    "\n",
+    "# Assume 2D points, z=0, although VTK's implementation works for 3D TPS.\n",
+    "#\n",
+    "# If using 3D TPS, one needs to set the basis function to R insteadl of R^2 log(R^2)\n",
+    "#\n",
+    "# transform.SetBasisToR()\n",
+    "#\n",
+    "\n",
+    "# image size, we need to flip the y-axis\n",
+    "imagex = 800\n",
+    "imagey = 600\n",
+    "\n",
+    "p1.SetNumberOfPoints( 5 )\n",
+    "p1.SetPoint( 0, 324,  imagey-499, 0) # right point on the lip,  y = 101\n",
+    "p1.SetPoint( 1, 378,  imagey-540, 0) # center point on the lip, y = 60\n",
+    "p1.SetPoint( 2, 451,  imagey-510, 0) # left point on the lip,   y = 90\n",
+    "p1.SetPoint( 3, 343,  imagey-234, 0) # right eye                y = 366\n",
+    "p1.SetPoint( 4, 452,  imagey-229, 0) # left eye                 y = 371\n",
+    "\n",
+    "p2.SetNumberOfPoints( 5 )\n",
+    "p2.SetPoint( 0, 324,  imagey-540, 0) # right point on the lip   y = 60\n",
+    "p2.SetPoint( 1, 378,  imagey-540, 0) # center point on the lip  y = 60\n",
+    "p2.SetPoint( 2, 451,  imagey-540, 0) # left point on the lip    y = 60\n",
+    "p2.SetPoint( 3, 343,  imagey-234, 0) # right eye                y = 366\n",
+    "p2.SetPoint( 4, 452,  imagey-229, 0) # left eye                 y = 371\n",
+    "\n",
+    "   \n",
+    "transform = vtk.vtkThinPlateSplineTransform()\n",
+    "transform.SetSourceLandmarks( p1 )\n",
+    "transform.SetTargetLandmarks( p2 )\n",
+    "transform.SetBasisToR2LogR()         # use transform.SetBasisToR() for 3D\n",
+    "transform.Modified()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question**: Where are the control points themself mapped to?\n",
+    "\n",
+    "```python\n",
+    "# one of the control point, assuming z=0\n",
+    "transform.TransformPoint([324, 101, 0]) # left point on the lip\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question**: What about a pixel that is far far away?\n",
+    "\n",
+    "```python\n",
+    "# a pixel that is far far away, assuming z=0\n",
+    "transform.TransformPoint([8000, 6000, 0])\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question**: What about a pixel located close to the control point?\n",
+    "\n",
+    "```python\n",
+    "# a pixel that is near by the control points\n",
+    "transform.TransformPoint([400, 300, 0])\n",
+    "```"
    ]
   },
   {
@@ -201,20 +283,55 @@
     "I'_{m}(T(x)) \\leftarrow I_{m}(X), \\forall x \\in \\Omega,\n",
     "$\n",
     "\n",
-    "This is referred to as the *forward* warping: pixels from the **Reference** image is moded *forward* from the coordinate frome of the reference image to the new image. One may come up with some pseudo-code for doing so:\n",
+    "This is referred to as the *forward* warping: pixels from the **Reference** image is *forwarded* from the coordinate frame of the reference image to the new image. One may come up with some pseudo-code for doing so:\n",
     "\n",
     "``` python\n",
     "for i in range(0, umax):\n",
     "  for j in range(0, vmax):\n",
-    "    newx = fx(u,v)\n",
-    "    newy = fy(u,v)\n",
-    "    newImage[newx, newy] = referenceImage[u,v]\n",
+    "    x = X(u,v)\n",
+    "    y = Y(u,v)\n",
+    "    newImage[round(X(u,v)), round(Y(u,v))] = referenceImage[u,v]\n",
     "```\n",
     "\n",
-    "There are potentially several problems in the Forward Warping approach:\n",
-    "* Same source pixel may map to multiple destination pixels,\n",
-    "* Some destination pixels may have no corresponding source (leaving holes in the new image)\n",
+    "<img src=\"forward_mapping.png\" style=\"width:600px\"/>\n",
     "\n",
+    "The function pair $[X(),Y()]$ defines what is known as a *forward map* from the reference image to new (warped) image. Note that the $round()$ operations in the assignment statement are necessary to provide integer pixel coordinates. If the reference image were continuous, and the forward map is reasonably smooth (i.e. it had no discontinuities), it would suffice to allow one to *paint in* the warped image from the reference image. That is, for each coordinate pair (u,v) in the reference image, we would simply color the point $[X(u,v), Y(u,v)]$ in the warped image the same colour as the point $(u,v)$ in the reference image.\n",
+    "\n",
+    "The fundamental problem is that we are working with **digital** image, meaning that the image/volume we get is a discrete samples of the original continuous signal. The implication is that, in general, the warp function will not map continuously-indexed pixels in the reference image to continuously-indexed pixels in the new image:\n",
+    "\n",
+    "\n",
+    "<img src=\"forward_warping.png\" style=\"width:600px\"/>\n",
+    "\n",
+    "There are potentially several problems in the Forward Warping approach:\n",
+    "* Same source pixel may map to multiple destination pixels, where the output is scaled down with respect to the reference,\n",
+    "* Some destination pixels may have no corresponding source, i.e. leaving holes in the new image, where the output is scaled up compared with the input,"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The fundamental problem is that each pixel in the reference (input) image represents a finite (non-zero) area and actually projects an area of the reference image onto the output, as shown below:\n",
+    "\n",
+    "<img src=\"pixel_project.png\" style=\"width:600px\"/>\n",
+    "\n",
+    "If the forward mapping algorithm carefully projects each pixel onto the output, we would see that each input pixel *might* fully cover some output pixels and partially cover several other output pixel, or it *might* only partially cover a single pixel. To construct a proper output image, we could calculate the percentage coverage of each output pixel by the input pixel, and use it to compute a weighted average pixel intensity/color for each output pixel. This would give us an warped/output image without holes or overlaps.\n",
+    "\n",
+    "But the calculation of the correct percentage/weights could get very complex, especially if the forward map is highly non-linear (i.e straight light gets mapped to a curved line):\n",
+    "* if the mapping is linear, a simple way to do the forward projection of a pixel is to map each of its four corners and then connect these projected corners by straight lines,\n",
+    "* if the mapping is non-linear, one would have to resort to other methods to get accurate results,\n",
+    "    - such as mapping many sample points around the pixel contour.\n",
+    "   \n",
+    "Either way, these methods are bound to be slow to computer and hard to implement.\n",
+    "\n",
+    "If the forward mapping is highly non-linear,"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* and there would be a *fold* problem as well:\n",
     "\n",
     "<img src=\"foward_warp_problem.PNG\" style=\"width:800px\"/>\n",
     "image courtesy of [here](http://groups.csail.mit.edu/graphics/classes/CompPhoto06/html/lecturenotes/14_WarpMorph.pdf)"
@@ -240,12 +357,50 @@
     "T^{-1}(x) \\approx x-u(x)\n",
     "$\n",
     "\n",
-    "As a metter of definition, the behavior of the transformation function can be treated as an inverse, so that an actual inversion would only be required for ward warping\n",
+    "As a matter of definition, the behavior of the transformation function can be treated as an inverse, so that an actual inversion would only be required for forward warping.\n",
     "\n",
     "<img src=\"foward_inverse_warping.PNG\" style=\"width:800px\"/>\n",
-    "Image courtesy of Loren Author Schwarz, 2007.\n",
+    "Image courtesy of Loren Author Schwarz, 2007.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "That is, instead of sending each input pixel to an output pixel, we look at each output pixel and determine what input pixel(s) map to it, as shown below.\n",
     "\n",
-    "One disadvantage of the inverse mapping is that ia may over-sample the original (Reference) image, resulting in an aliased image:\n",
+    "<img src=\"inverse_warping.PNG\" style=\"width:800px\"/>\n",
+    "\n",
+    "The inver mapping function can be defined as:\n",
+    "\n",
+    "$u = U(x,y)$\n",
+    "\n",
+    "$v = V(x,y)$\n",
+    "\n",
+    "such that\n",
+    "\n",
+    "$u = U[X(u,v), Y(u,v)]$\n",
+    "\n",
+    "$v = V[X(u,v), Y(u,v)]$\n",
+    "\n",
+    "In other words, the function pair $[U(),V()]$ is chosen such that it should exactly inverts (un-do) the mapping due to the pair $[X(),Y()]$. Thus, if one samples the output image at oint $(x,y)$, then $(u,v)=[U(x,y),V(x,y)]$ gives the coordinate $(u,v)$ in the input/reference image that map to position $(x,y)$ in the output. As in the forward mapping, one would need to **round** the inverse mapping to give integer pixel coordinates, but keep in mind that we are roudning the coordinates in the *input/reference* (which is **rectilinear**) and not in the output image (which is **warped**). The inverse warping algorithm is simply:\n",
+    "\n",
+    "``` python\n",
+    "for i in range(0, xmax):\n",
+    "  for j in range(0, ymax):\n",
+    "    u = U(x,y)\n",
+    "    v = Y(x,y)\n",
+    "    newImage[x,y] = referenceImage[round(U(x,y)),round(V(x,y))]\n",
+    "```\n",
+    "\n",
+    "Thus, even with a sampled digital image, we can compute the output image from the input image using the inverse warping, without fear of holes or overlaps in the output image."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One disadvantage of the inverse mapping is that it may over-sample the original (Reference) image, resulting in an **aliasing artifacts**, or under-sample the original image, resulting in an **reconstruction artifacts** (leading to staircasing effects).\n",
     "\n",
     "<img src=\"resampling_aliasing.png\" style=\"width:800px\"/>\n",
     "image courtesy [here](http://groups.csail.mit.edu/graphics/classes/CompPhoto06/html/lecturenotes/14_WarpMorph.pdf)\n",
@@ -333,7 +488,7 @@
    "source": [
     "#### Medical Example\n",
     "\n",
-    "In Breast Cancer Imaging using MRI, in order to differentiate tissue types in MRI, a contrast agent is often injected into the tissie. One side benefit of such an injection is that because the contrast is enhanced, it enhances image registration.\n",
+    "In Breast Cancer Imaging using MRI, in order to differentiate tissue types in MRI, a contrast agent is often injected into the tissue. One side benefit of such an injection is that because the contrast is enhanced, it enhances image registration.\n",
     "\n",
     "As it often takes time for the contrast agent to infuse into (wash-in), and out of (wash-out), the MRI images taken at different time will have different appearances:\n",
     "\n",
